--- a/resources/templates/channel_edit_program.html
+++ b/resources/templates/channel_edit_program.html
@@ -29,7 +29,7 @@
         </div>
 
         <div class="channel-editor-program-trigger input-group input-group-sm">
-            <div class="input-group-btn"  style="float: left;">
+            <div class="input-btn"  style="float: left;">
               <button type="button" class="btn btn-danger btn-channel-setup-timer">
                 <i class="fa fa-fw fa-bomb"></i>
                 <b><%=language.timingTrigger%></b>
@@ -38,7 +38,7 @@
 
 
             <!-- /btn-group -->
-            <label type="text" class="form-control" style="width: calc(100% - 88px); height: 30px; overflow: hidden; float: right; display: inline; line-height: 25px;">
+            <label type="text" class="form-control" style="height: 30px; overflow: hidden; float: right; display: inline; line-height: 25px;">
                 <label class="timer-field timer-field-date">
                     <span></span>
                 </label>
