--- a/resources/templates/channel_edit_main.html
+++ b/resources/templates/channel_edit_main.html
@@ -79,7 +79,7 @@
                             <option value="Random"><%=lang.random%></option>
                             <% } %>
                             <% if (type === 'Percent') { %>
-                            <option value="Percent" selected><%=lang.random%></option>
+                            <option value="Percent" selected><%=lang.ratio%></option>
                             <% } else { %>
                             <option value="Percent"><%=lang.ratio%></option>
                             <% } %>
