--- a/resources/css/pages/channel/edit.css
+++ b/resources/css/pages/channel/edit.css
@@ -92,7 +92,7 @@
 
 #channel-editor-wrapper .channel-program-widget {
     width: 465px;
-    height: 100%;
+    height: calc(100% - 36px);
     float: left;
 }
 
